gcc/testsuite/rust/rustc/ui/typeck/issue-89806_dg.rs
fn main() {
    0u8.as_ref(); // { dg-error ".E0599." "" { target *-*-* } }
}

